--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
-    "start": "npx prisma generate && npx prisma db push && node -r tsconfig-paths/register dist/index.js",
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
+    "start": "npx prisma generate && npx prisma db push && node dist/index.js",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
@@ -36,6 +36,7 @@
     "@types/papaparse": "^5.3.16",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.3"
   }
