--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "zod": "^4.1.12"
   },
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
+    "dev": "prisma generate && ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
     "build": "tsc && tsc-alias",
     "start": "npx prisma generate && npx prisma db push && node dist/index.js",
     "db:push": "prisma db push",
